--- a/DM2021_Lab2_master.ipynb
+++ b/DM2021_Lab2_master.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -167,38 +167,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10000</td>\n",
-       "      <td>How the fu*k! Who the heck! moved my fridge!.....</td>\n",
+       "      <td>10857</td>\n",
+       "      <td>@ZubairSabirPTI  pls dont insult the word 'Molna'</td>\n",
        "      <td>anger</td>\n",
-       "      <td>0.938</td>\n",
+       "      <td>0.479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>So my Indian Uber driver just called someone t...</td>\n",
+       "      <td>10858</td>\n",
+       "      <td>@ArcticFantasy I would have almost took offens...</td>\n",
        "      <td>anger</td>\n",
-       "      <td>0.896</td>\n",
+       "      <td>0.458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10002</td>\n",
-       "      <td>@DPD_UK I asked for my parcel to be delivered ...</td>\n",
+       "      <td>10859</td>\n",
+       "      <td>@IllinoisLoyalty that Rutgers game was an abom...</td>\n",
        "      <td>anger</td>\n",
-       "      <td>0.896</td>\n",
+       "      <td>0.562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10003</td>\n",
-       "      <td>so ef whichever butt wipe pulled the fire alar...</td>\n",
+       "      <td>10860</td>\n",
+       "      <td>@CozanGaming that's what lisa asked before she...</td>\n",
        "      <td>anger</td>\n",
-       "      <td>0.896</td>\n",
+       "      <td>0.500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10004</td>\n",
-       "      <td>Don't join @BTCare they put the phone down on ...</td>\n",
+       "      <td>10861</td>\n",
+       "      <td>Sometimes I get mad over something so minuscul...</td>\n",
        "      <td>anger</td>\n",
-       "      <td>0.896</td>\n",
+       "      <td>0.708</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -206,14 +206,14 @@
       ],
       "text/plain": [
        "      id                                               text emotion  intensity\n",
-       "0  10000  How the fu*k! Who the heck! moved my fridge!.....   anger      0.938\n",
-       "1  10001  So my Indian Uber driver just called someone t...   anger      0.896\n",
-       "2  10002  @DPD_UK I asked for my parcel to be delivered ...   anger      0.896\n",
-       "3  10003  so ef whichever butt wipe pulled the fire alar...   anger      0.896\n",
-       "4  10004  Don't join @BTCare they put the phone down on ...   anger      0.896"
+       "0  10857  @ZubairSabirPTI  pls dont insult the word 'Molna'   anger      0.479\n",
+       "1  10858  @ArcticFantasy I would have almost took offens...   anger      0.458\n",
+       "2  10859  @IllinoisLoyalty that Rutgers game was an abom...   anger      0.562\n",
+       "3  10860  @CozanGaming that's what lisa asked before she...   anger      0.500\n",
+       "4  10861  Sometimes I get mad over something so minuscul...   anger      0.708"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
     "\n",
     "# combine 4 sub-dataset\n",
     "test_df = pd.concat([anger_test, fear_test, joy_test, sadness_test], ignore_index=True)\n",
-    "train_df.head()"
+    "test_df.head()"
    ]
   },
   {
@@ -3156,13 +3156,6 @@
     "for label, x, y in zip(target_words, X_tsne[:target_size, 0], X_tsne[:target_size, 1]):\n",
     "    plt.annotate(label, xy=(x,y), xytext=(0,0),  textcoords='offset points')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
    ]
   }
  ],
